<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/container_View"
    android:onClick="onClick"
    tools:context=".Ui.CreationMatch">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Cancelar"
            android:textColor="@color/followers"
            app:layout_constraintEnd_toStartOf="@+id/textViewBeta"
            app:layout_constraintHorizontal_bias="0.202"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Nueva Publicación"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25"
            app:srcCompat="@drawable/man" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="UserName"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toEndOf="@+id/imageView15"
            app:layout_constraintTop_toBottomOf="@+id/textViewBeta" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ubicacion"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toEndOf="@+id/imageView15"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="352dp"
            android:layout_height="130dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/imagen"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="13dp"
            android:text="@string/insertar_imagen"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nombre_cancha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ingrese_nombre_de_la_cancha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <EditText
            android:id="@+id/animeEditText"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/selecione_ubicacion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ingrese_ubicaci_n"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animeEditText" />

        <EditText
            android:id="@+id/telefonoEditText"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/tel_fono"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ingrese_tel_fono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefonoEditText" />

        <TextView
            android:id="@+id/horarioEntradaEditText"
            android:layout_width="134dp"
            android:layout_height="34dp"
            android:layout_marginTop="27dp"
            android:ems="20"
            android:hint="@string/apertura"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toEndOf="@+id/button_btn"
            app:layout_constraintTop_toBottomOf="@+id/textView35" />

        <TextView
            android:id="@+id/horarioCierre_daEditText"
            android:layout_width="134dp"
            android:layout_height="34dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="132dp"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="@string/cierre"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_Cierre"
            app:layout_constraintTop_toBottomOf="@+id/horarioEntradaEditText" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/horarios_de_apertura_y_cierre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/escriba_que_tipo_de_canchas_tiene_para_10_personas_o_m_s_y_al_d_a_cuantos_turnos_tiene_en_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horarioCierre_daEditText" />

        <EditText
            android:id="@+id/editTextTextPersonName7"
            android:layout_width="352dp"
            android:layout_height="76dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/escribir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:text="@string/ingrese_descripci_n"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/precioEditText"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/coste_por_cancha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/ingrese_coste"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/precioEditText" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="352dp"
            android:layout_height="76dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/descripci_n"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />


        <TextView
            android:id="@+id/btn_GuardarMat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/siguiente"
            android:textColor="@color/followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.792"
            app:layout_constraintStart_toEndOf="@+id/textViewBeta"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_btn"
            android:layout_width="78dp"
            android:layout_height="39dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:onClick="onClick"
            android:text="Hora"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView35" />

        <Button
            android:id="@+id/button_Cierre"
            android:layout_width="78dp"
            android:layout_height="39dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:onClick="onClick"
            android:text="Hora"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>